# Elden-Lore

./: .dockerignore  .env.example  .gitignore  Dockerfile  Project_status.md  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: df6588b023f9_conversations_and_messages.py
backend/api/: auth.py  config.py  deps.py  errors.py  logging_config.py  main.py
backend/api/db/: models.py  repository.py  session.py
backend/api/routers/: chat.py  conversations.py  health.py
backend/core/: build_gazetteer.py  entity_resolver.py  generate.py  llm.py  pipeline.py  prompts.py  retriever.py  router.py
backend/core/data/: gazetteer.json
backend/eval/: bench.py  eval_questions.txt  questions.json  run_conversations.py  user_questions.json
data_pipeline/: chunker.py  common.py  debug_scraper.py  discover.py  embed.py  ingest.py  merge_embeddings.py  patch_dlc.py  scrape.py  upload.py  verify_setup.py  wiki_scraper.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ChatInput.tsx  ChatView.tsx  Message.tsx  Sidebar.tsx  SigilBackground.tsx  VoiceToggle.tsx
frontend/lib/: api.ts  types.ts  useChatStream.ts
