[project]
name = "elden-ring-rag"
version = "0.1.0"
description = "RAG chatbot for Elden Ring lore, items, quests, and bosses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Data pipeline ---
    "httpx>=0.28",               # async HTTP for wiki scraping
    "beautifulsoup4>=4.13",      # HTML parsing
    "lxml>=5.3",                 # fast BS4 parser backend
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2025.1",

    # --- NLP / chunking ---
    "spacy>=3.8",                # NER + entity ruler
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-qdrant>=0.2",

    # --- Embeddings ---
    "sentence-transformers>=3.4",
    "torch>=2.5",                # CUDA build on Win/Linux via [tool.uv.sources] below
    "langchain-nvidia-ai-endpoints>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "rapidfuzz>=3.10",
    "jellyfish>=1.1",
    # --- Vector DB ---
    "qdrant-client>=1.13",

    # --- Utils ---
    "python-dotenv>=1.0",
    "tenacity>=9.0",             # retry logic for scraping
    "tqdm>=4.67",                # progress bars
    "rich>=13.9",                # better console output
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "ruff>=0.9",                 # linter + formatter
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ipykernel>=6.29",           # notebook support for exploration
]

# ── PyTorch CUDA build ─────────────────────────────────────────────
# PyPI serves CPU-only torch wheels on Windows by default, which is why
# `uv run` kept reverting to +cpu. Routing torch to the cu121 index makes
# the CUDA build the locked source of truth (GTX 1650 = Turing, cu121 is the
# safe, broadly-compatible choice). On macOS there are no CUDA wheels, so we
# gate the source to Windows + Linux and let macOS fall back to PyPI.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"